doesn't really work yet, have to solve the generic issue